2008-01-04  Stefan Petersen  <spe>

	* src/interface.c: Changed menu entries where another window is popped
	  up so text ends in three dots. "Save as" and "Print" uses built in
	  GTK operations, so the hack there got not so nice. Is there other 
	  ways, like predefined with the three dots?
	* src/draw-gdk.c: Fixed aperture macro drawing in GDK target as well.

2008-01-03  Julian Lamb
	* draw.c: Fix some amacro rendering problems that Stefan uncovered.
	* draw.c: Change the thermal rendering logic to do rendering without
	  push/pop operations, so that vector output will work (previously, the
	  cairo export defaulted to an image export for thermal rendering).
	* render.c: Fix autoscaling for new amacro test (although the hack will be
	  unnecessary after we reorder the amacro rendering process to correctly
	  calculate the extents of each flashed macro aperture).
	  
2008-1-2  Stuart Brorson (sdb@cloud9.net)
	* src/Makefile.am, src/icons.h, src/interface.c:
	Added icons for toggletool buttons: move, zoom, and measure.

2007-12-31  Julian Lamb
	* gerbv.c: Rework project filename saving to save all layers with relative
	  pathnames, relative to the project file location. This allows projects
	  to be relocated, and fixes the second half of bug# 1443885.
	* gerbv.c: More work on command line parsing.
	* interface.c, render.c, callbacks.c: Reimplement different rendering modes
	  into the sidepane combobox for GDK. For cairo, allow the user to change the
	  quality vs speed.
	* pick-and-place.c, draw.c: Correct pick and place parsing to use inches
	  for the basic unit. Render names of pick-and-place components to help
	  check placement.
	
2007-12-31  Stuart Brorson (sdb@cloud9.net)
        * src/drill.[hc], gerber.[hc], gerbv.c, pick-and-place.[hc]:
        Overhauled checks for file type.  Now all file types (Gerber,
        drill, pick-place) are FALSE by default, and only are TRUE
        when positive of file type indications are found.  Also added